--- a/index.html
+++ b/index.html
@@ -23,18 +23,22 @@
     <section id="home">
         <h2>Welcome to Our Orphanage</h2>
         <p>We provide a loving and caring environment for orphaned children.</p>
+        <div class="image-container">
+            <img src="images/image1.jpg" alt="Orphanage Image 1">
+            
+            <!-- Add more images here -->
+        </div>
     </section>
 
     <section id="about">
         <h2>About Us</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac consectetur justo.</p>
+        <p>Founded with love and compassion, our orphanage is a safe haven for vulnerable children. Our mission is to provide them with a nurturing environment, education, healthcare, and opportunities for a brighter future. We're dedicated to shaping their lives with care and hope.</p>
         <!-- Add more information about the orphanage -->
     </section>
 
     <section id="gallery">
         <h2>Photo Gallery</h2>
-        <div class="image-container">
-            <!-- <img src="images/image1.jpg" alt="Orphanage Image 1"> -->
+        <div class="image-container">            
             <img src="images/image2.jpg" alt="Orphanage Image 2">
             <!-- Add more images here -->
         </div>
