--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Our Orphanage</title>
+    <title>Please Donate for Our Orphanage</title>
 </head>
 <body>
     <header>
@@ -51,9 +51,10 @@
         </p>
 
         <div class="container">
+            <h2>We do not wanted to get donation of thousands or millions, We just need 4 rupees from each of you. </h2>
+            <h2>If 5 lakhs people will donate4 rupees that will be good enough for our orphanage </h2>
             <a href="https://donate.stripe.com/8wM8xB4Kj2TA012fZ0" class="donate-button">Donate Now</a>
-        </div>
-        <!-- <button><a href="https://donate.stripe.com/8wM8xB4Kj2TA012fZ0">Donate Now</a></button> -->
+        </div>        
     </section>
 
     <section id="contact">
