--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Please Donate for Our Orphanage</title>
+    <title>Our Orphanage</title>
 </head>
 <body>
     <header>
-        <h1>Our Orphanage</h1>
+        <h1>Please Donate for Our Orphanage</h1>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
